<resources>
    <string name="app_name">AllofMe</string>

    <!--Bottom Nav-->
    <string name="menu_article">목록</string>
    <string name="menu_my">내 정보</string>

    <!-- Viewholder ArticleList -->
    <string name="user_name">사용자</string>
    <string name="article_title">포트폴리오 제목</string>
    <string name="chip_field">field</string>
    <string name="chip_year">year</string>
    <string name="field_format">%s</string>
    <string name="year_format">%s</string>
    <string name="need_login">로그인이 필요합니다</string>
    <string name="logout">로그아웃</string>
    <string name="update_my_article">내 포트폴리오 수정하기</string>
    <string name="post_article">글 쓰기</string>
    <string name="post_title">제목</string>

    <!-- EditText Hint-->
    <string name="edit_hint">내용을 작성해 주세요.</string>

    <!-- GalleryActivity -->
    <string name="confirm">확인</string>

    <!-- AlertDialog-->
    <string name="alert_cancel">취소</string>
    <string name="alert_confirm">확인</string>
    <string name="update">수정</string>
</resources>