<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/selectableItemBackground">


    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:src="@drawable/ic_my"
        tools:src="@drawable/ic_my"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="@id/profileImageView"
        app:layout_constraintStart_toEndOf="@id/profileImageView"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:text="@string/user_name"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintStart_toEndOf="@id/profileImageView"
        app:layout_constraintBottom_toBottomOf="@id/profileImageView"
        android:ems="8"
        android:maxLines="1"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:text="@string/article_title"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/fieldChip"
        style="@style/Widget.AllofMe.Chip_Small"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintTop_toTopOf="@id/profileImageView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/chip_field"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/yearChip"
        style="@style/Widget.AllofMe.Chip_Small"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:clickable="false"
        android:focusable="false"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/fieldChip"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/chip_year"/>



</androidx.constraintlayout.widget.ConstraintLayout>