<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/profileGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="profileImageView,userNameTextView,logoutButton, updateArticleButton"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        android:textSize="16sp"
        app:layout_goneMarginTop="8dp"
        tools:text="이예섭"
        app:layout_constraintStart_toStartOf="@id/profileImageView"
        app:layout_constraintEnd_toEndOf="@id/profileImageView"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:text="@string/logout"/>

    <Button
        android:id="@+id/updateArticleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/userNameTextView"
        app:layout_constraintStart_toStartOf="@id/userNameTextView"
        app:layout_constraintEnd_toEndOf="@id/userNameTextView"
        android:text="@string/update_my_article"/>


    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginRequiredGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="loginButton,loginTextView"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_login"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>